fix about on mobile

--- a/news-explorer-frontend/src/components/About/About.css
+++ b/news-explorer-frontend/src/components/About/About.css
@@ -71,12 +71,17 @@
   .about {
     flex-direction: column;
     padding: 32px 24px;
+    align-items: center;
   }
 
   .about__image {
     width: 272px;
     height: 272px;
     margin: 0px;
+  }
+
+  .about__header {
+    text-align: center;
   }
 
   .about__title {
